--- a/charts/chainlink-nodes/values.yaml
+++ b/charts/chainlink-nodes/values.yaml
@@ -1,6 +1,29 @@
 global:
   image:
     tag: 2.9.0
+  company:
+    name: #example
+    admins:
+      domain: ""
+      emails: []
+    domain:
+      root: #example.com
+      env: #int.example.com, dev.example.com, prd.example.com etc
+  network:
+    int_nat_gw:
+  registry:
+    url:
+  bucket:
+    type:
+    prefix:
+    suffix:
+  ingress:
+    class: pomerium
+  env:
+    name: #aws-prd or aws-int or aws-stg
+    server: #https://2.2.2.2
+    short_name: #pre/prd/int/dev/etc
+
 node-1:
   enabled: false
 node-2:
