--- a/charts/external-dns/values.yaml
+++ b/charts/external-dns/values.yaml
@@ -1,3 +1,27 @@
+global:
+  company:
+    name: #example
+    admins:
+      domain: ""
+      emails: []
+    domain:
+      root: #example.com
+      env: #int.example.com, dev.example.com, prd.example.com etc
+  network:
+    int_nat_gw:
+  registry:
+    url:
+  bucket:
+    type:
+    prefix:
+    suffix:
+  ingress:
+    class: pomerium
+  env:
+    name: #aws-prd or aws-int or aws-stg
+    server: #https://2.2.2.2
+    short_name: #pre/prd/int/dev/etc
+
 external-dns:
   enabled: false
   resources:
