--- a/charts/thanos/values.yaml
+++ b/charts/thanos/values.yaml
@@ -57,7 +57,7 @@ ingresses:
       port: 10901
     className: konghq
     annotations:
-      cert-manager.io/cluster-issuer: '{{ printf "letsencrypt-%s" .Values.global.ingress.class }}'
+      cert-manager.io/cluster-issuer: letsencrypt-konghq
       konghq.com/protocols: grpc,grpcs
       konghq.com/plugins: thanos-store-main-ip-restriction
     hosts:
@@ -77,7 +77,7 @@ kong-plugins:
     - name: thanos-store-main-ip-restriction
       plugin_name: ip-restriction
       annotations:
-        kubernetes.io/ingress.class: '{{ .Values.global.ingress.class }}'
+        kubernetes.io/ingress.class: konghq
       config:
         allow:
           - "{{ .Values.global.network.int_nat_gw }}"
