Global attr refactor (#59)
* environments: global attrs

* environment: common attr to global section

* cert-manager,prometheus,thanos: default ingress.class pomerium

* chainlink-nodes,external-dns,gha-runner,gha-operator,redis: global atts

* prometheus,thanos: fix kong issues

* changelog: update

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -19,7 +19,7 @@ global:
   registry:
     url:
   ingress:
-    class: konghq
+    class: pomerium
   bucket:
     type:
     prefix:
@@ -36,7 +36,7 @@ ingresses:
     service:
       name: '{{ include "prometheus.fullname" . }}-alertmanager-main'
       port: 80
-    className: pomerium
+    className: "{{ .Values.global.ingress.class }}"
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-pomerium
       ingress.pomerium.io/policy: |
@@ -62,7 +62,7 @@ ingresses:
     service:
       name: '{{ include "prometheus.fullname" . }}-prometheus-main'
       port: 80
-    className: pomerium
+    className: "{{ .Values.global.ingress.class }}"
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-pomerium
       ingress.pomerium.io/policy: |
@@ -87,9 +87,9 @@ ingresses:
     service:
       name: '{{ include "prometheus.fullname" . }}-prometheus-main-thanos'
       port: 8080
-    className: "{{ .Values.global.ingress.class }}"
+    className: konghq
     annotations:
-      cert-manager.io/cluster-issuer: '{{ printf "letsencrypt-%s" .Values.global.ingress.class }}'
+      cert-manager.io/cluster-issuer: letsencrypt-konghq
       konghq.com/protocols: grpc,grpcs
       konghq.com/plugins: thanos-main-ip-restriction
     hosts:
@@ -401,7 +401,7 @@ kong-plugins:
     - name: thanos-main-ip-restriction
       plugin_name: ip-restriction
       annotations:
-        kubernetes.io/ingress.class: '{{ .Values.global.ingress.class }}'
+        kubernetes.io/ingress.class: konghq
       config:
         allow:
           - "{{ .Values.global.network.int_nat_gw }}"
