--- a/charts/thanos/values.yaml
+++ b/charts/thanos/values.yaml
@@ -16,7 +16,7 @@ global:
     prefix:
     suffix:
   ingress:
-    class: konghq
+    class: pomerium
   env:
     name: #aws-prd or aws-int or aws-stg
     server: #https://2.2.2.2
@@ -29,7 +29,7 @@ ingresses:
     service:
       name: '{{ include "thanos.fullname" . }}-query'
       port: 9090
-    className: pomerium
+    className: "{{ .Values.global.ingress.class }}"
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-pomerium
       ingress.pomerium.io/policy: |
@@ -55,9 +55,9 @@ ingresses:
     service:
       name: '{{ include "thanos.fullname" . }}-storegateway'
       port: 10901
-    className: "{{ .Values.global.ingress.class }}"
+    className: konghq
     annotations:
-      cert-manager.io/cluster-issuer: '{{ printf "letsencrypt-%s" .Values.global.ingress.class }}'
+      cert-manager.io/cluster-issuer: letsencrypt-konghq
       konghq.com/protocols: grpc,grpcs
       konghq.com/plugins: thanos-store-main-ip-restriction
     hosts:
@@ -77,7 +77,7 @@ kong-plugins:
     - name: thanos-store-main-ip-restriction
       plugin_name: ip-restriction
       annotations:
-        kubernetes.io/ingress.class: '{{ .Values.global.ingress.class }}'
+        kubernetes.io/ingress.class: konghq
       config:
         allow:
           - "{{ .Values.global.network.int_nat_gw }}"
