`all charts`: global.admins -> global.teams.admin + add qa,pm,dev groups

--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -3,9 +3,16 @@ labels: {}
 global:
   company:
     name: #example
-    admins:
+    teams:
       domain: ""
-      emails: []
+      admin:
+        emails: []
+      qa:
+        emails: []
+      dev:
+        emails: []
+      pm:
+        emails: []
     domain:
       root: #example.com
       env: #int.example.com, dev.example.com, prd.example.com etc
