--- a/charts/thanos/values.yaml
+++ b/charts/thanos/values.yaml
@@ -1,9 +1,16 @@
 global:
   company:
     name: #example
-    admins:
+    teams:
       domain: ""
-      emails: []
+      admin:
+        emails: []
+      qa:
+        emails: []
+      dev:
+        emails: []
+      pm:
+        emails: []
     domain:
       root: #example.com
       env: #int.example.com, dev.example.com, prd.example.com etc
@@ -35,7 +42,7 @@ ingresses:
       ingress.pomerium.io/policy: |
         allow:
           or:
-            {{- range $email := .Values.global.company.admins.emails }}
+            {{- range $email := .Values.global.company.teams.admin.emails }}
             - email:
                 is: {{ $email }}
             {{- end }}
