--- a/charts/chainlink-nodes/values.yaml
+++ b/charts/chainlink-nodes/values.yaml
@@ -3,9 +3,16 @@ global:
     tag: 2.9.0
   company:
     name: #example
-    admins:
+    teams:
       domain: ""
-      emails: []
+      admin:
+        emails: []
+      qa:
+        emails: []
+      dev:
+        emails: []
+      pm:
+        emails: []
     domain:
       root: #example.com
       env: #int.example.com, dev.example.com, prd.example.com etc
