--- a/charts/rabbitmq/values.yaml
+++ b/charts/rabbitmq/values.yaml
@@ -1,9 +1,16 @@
 global:
   company:
     name: #example
-    admins:
+    teams:
       domain: ""
-      emails: []
+      admin:
+        emails: []
+      qa:
+        emails: []
+      dev:
+        emails: []
+      pm:
+        emails: []
     domain:
       root: #example.com
       env: #int.example.com, dev.example.com, prd.example.com etc
@@ -33,9 +40,11 @@ ingresses:
     annotations:
       cert-manager.io/cluster-issuer: '{{ printf "letsencrypt-%s" .Values.global.ingress.class }}'
       ingress.pomerium.io/policy: |
+        {{- $teams  := .Values.global.company.teams }}
+        {{- $emails := concat $teams.admin.emails $teams.dev.emails }}
         allow:
           or:
-            {{- range $email := .Values.global.company.admins.emails }}
+            {{- range $email := $emails }}
             - email:
                 is: {{ $email }}
             {{- end }}
