--- a/charts/konghq/values.yaml
+++ b/charts/konghq/values.yaml
@@ -28,6 +28,12 @@ global:
     name: #aws-prd or aws-int or aws-stg
     server: #https://2.2.2.2
     short_name: #pre/prd/int/dev/etc
+  access:
+    teams: ["admin"]
+    emails: []
+  pomerium:
+    policy:
+      default: ""
 
 kong-plugins:
   enabled: false
