--- a/charts/argocd/values.yaml
+++ b/charts/argocd/values.yaml
@@ -31,6 +31,12 @@ global:
     name: #aws-prd or aws-int or aws-stg
     server: #https://2.2.2.2
     short_name: #pre/prd/int/dev/etc
+  access:
+    teams: ["dev", "admin"]
+    emails: []
+  pomerium:
+    policy:
+      default: ""
 
 #Cant use pomerium jwt to create users in argocd
 #until this is merged https://github.com/argoproj/argo-cd/pull/20928
@@ -46,14 +52,8 @@ ingresses:
       cert-manager.io/cluster-issuer: '{{ printf "letsencrypt-%s" .Values.global.ingress.class }}'
       ingress.pomerium.io/pass_identity_headers: 'true'
       ingress.pomerium.io/policy: |
-        {{- $teams  := .Values.global.company.teams }}
-        {{- $emails := concat $teams.admin.emails $teams.dev.emails $teams.qa.emails }}
-        allow:
-          or:
-            {{- range $email :=  $emails }}
-            - email:
-                is: {{ $email }}
-            {{- end }}
+        {{- tpl .Values.global.pomerium.policy.default $ | nindent 2}}
+
     hosts:
     - host: "ag.{{ .Values.global.company.domain.env }}"
       paths:
