--- a/charts/pomerium/values.yaml
+++ b/charts/pomerium/values.yaml
@@ -31,7 +31,12 @@ global:
     name: #aws-prd or aws-int or aws-stg
     server: #https://2.2.2.2
     short_name: #pre/prd/int/dev/etc
-
+  access:
+    teams: ["admin"]
+    emails: []
+  pomerium:
+    policy:
+      default: ""
 
 ingressClassName: '{{ .Values.global.ingress.class }}'
 
