--- a/charts/postgres/values.yaml
+++ b/charts/postgres/values.yaml
@@ -120,7 +120,7 @@ pgadmin:
       cert-manager.io/cluster-issuer: '{{ printf "letsencrypt-%s" .Values.global.ingress.class }}'
       ingress.pomerium.io/pass_identity_headers: 'true'
       ingress.pomerium.io/policy: |
-        {{- tpl .Values.global.pomerium.policy.default $ | nindent 2}}
+        {{- tpl .Values.global.pomerium.policy.default $ | indent 2}}
     hosts:
       - host: 'pg.{{ .Values.global.company.domain.env }}'
         paths:
