--- a/charts/thanos/values.yaml
+++ b/charts/thanos/values.yaml
@@ -46,7 +46,7 @@ ingresses:
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-pomerium
       ingress.pomerium.io/policy: |
-        {{- tpl .Values.global.pomerium.policy.default $ | nindent 2}}
+        {{- tpl .Values.global.pomerium.policy.default $ | indent 2}}
     hosts:
       - host: "tq.{{ .Values.global.company.domain.env }}"
         paths:
