--- a/charts/argocd/values.yaml
+++ b/charts/argocd/values.yaml
@@ -1,9 +1,16 @@
 global:
   company:
     name: #example
-    admins:
+    teams:
       domain: ""
-      emails: []
+      admin:
+        emails: []
+      qa:
+        emails: []
+      dev:
+        emails: []
+      pm:
+        emails: []
     domain:
       root: #example.com
       env: #int.example.com, dev.example.com, prd.example.com etc
@@ -24,6 +31,12 @@ global:
     name: #aws-prd or aws-int or aws-stg
     server: #https://2.2.2.2
     short_name: #pre/prd/int/dev/etc
+  access:
+    teams: ["dev", "admin"]
+    emails: []
+  pomerium:
+    policy:
+      default: ""
 
 #Cant use pomerium jwt to create users in argocd
 #until this is merged https://github.com/argoproj/argo-cd/pull/20928
@@ -39,21 +52,17 @@ ingresses:
       cert-manager.io/cluster-issuer: '{{ printf "letsencrypt-%s" .Values.global.ingress.class }}'
       ingress.pomerium.io/pass_identity_headers: 'true'
       ingress.pomerium.io/policy: |
-        allow:
-          or:
-            {{- range $email := .Values.global.company.admins.emails }}
-            - email:
-                is: {{ $email }}
-            {{- end }}
+        {{- tpl .Values.global.pomerium.policy.default $ | indent 2 }}
+
     hosts:
-    - host: "argocd.{{ .Values.global.company.domain.env }}"
+    - host: "ag.{{ .Values.global.company.domain.env }}"
       paths:
       - path: /
         pathType: ImplementationSpecific
     tls:
-    - secretName: argocd-tls
+    - secretName: ag-tls
       hosts:
-      - "argocd.{{ .Values.global.company.domain.env }}"
+      - "ag.{{ .Values.global.company.domain.env }}"
 
 argocd:
   enabled: false
