--- a/charts/chainlink-nodes/values.yaml
+++ b/charts/chainlink-nodes/values.yaml
@@ -3,9 +3,16 @@ global:
     tag: 2.9.0
   company:
     name: #example
-    admins:
+    teams:
       domain: ""
-      emails: []
+      admin:
+        emails: []
+      qa:
+        emails: []
+      dev:
+        emails: []
+      pm:
+        emails: []
     domain:
       root: #example.com
       env: #int.example.com, dev.example.com, prd.example.com etc
@@ -23,6 +30,12 @@ global:
     name: #aws-prd or aws-int or aws-stg
     server: #https://2.2.2.2
     short_name: #pre/prd/int/dev/etc
+  access:
+    teams: ["dev", "admin"]
+    emails: []
+  pomerium:
+    policy:
+      default: ""
 
 node-1:
   enabled: false
