--- a/charts/grafana/values.yaml
+++ b/charts/grafana/values.yaml
@@ -1,9 +1,16 @@
 global:
   company:
     name: #example
-    admins:
+    teams:
       domain: ""
-      emails: []
+      admin:
+        emails: []
+      qa:
+        emails: []
+      dev:
+        emails: []
+      pm:
+        emails: []
     domain:
       root: #example.com
       env: #int.example.com, dev.example.com, prd.example.com etc
@@ -21,6 +28,12 @@ global:
     name: #aws-prd or aws-int or aws-stg
     server: #https://2.2.2.2
     short_name: #pre/prd/int/dev/etc
+  access:
+    teams: ["dev", "admin", "qa", "pm"]
+    emails: []
+  pomerium:
+    policy:
+      default: ""
 
 ingresses:
   main:
@@ -34,21 +47,16 @@ ingresses:
       cert-manager.io/cluster-issuer: '{{ printf "letsencrypt-%s" .Values.global.ingress.class }}'
       ingress.pomerium.io/pass_identity_headers: 'true'
       ingress.pomerium.io/policy: |
-        allow:
-          or:
-            {{- range $email := .Values.global.company.admins.emails }}
-            - email:
-                is: {{ $email }}
-            {{- end }}
+        {{- tpl .Values.global.pomerium.policy.default $ | indent 2}}
     hosts:
-      - host: "grafana.{{ .Values.global.company.domain.env }}"
+      - host: "gf.{{ .Values.global.company.domain.env }}"
         paths:
           - path: /
             pathType: Prefix
     tls:
-      - secretName: grafana-tls
+      - secretName: gf-tls
         hosts:
-          - "grafana.{{ .Values.global.company.domain.env }}"
+          - "gf.{{ .Values.global.company.domain.env }}"
 
 grafana-operator:
   enabled: false
@@ -83,7 +91,7 @@ grafana-main:
     alerting:
       enabled: "false"
     server:
-      root_url: https://grafana.{{ .Values.global.company.domain.env }}
+      root_url: https://gf.{{ .Values.global.company.domain.env }}
   deployment:
     spec:
       template:
@@ -102,7 +110,7 @@ grafana-main:
                   memory: 65Mi
               env:
                 - name: GF_AUTH_SIGNOUT_REDIRECT_URL
-                  value: 'https://grafana.{{ .Values.global.company.domain.env }}/.pomerium/sign_out'
+                  value: 'https://gf.{{ .Values.global.company.domain.env }}/.pomerium/sign_out'
                 - name: GF_AUTH_JWT_ENABLED
                   value: 'true'
                 - name: GF_AUTH_JWT_HEADER_NAME
