--- a/charts/pomerium/values.yaml
+++ b/charts/pomerium/values.yaml
@@ -4,9 +4,16 @@ global:
     tag: v0.29.4@sha256:6a5b4a545ad39f0a9daa61afc0f80efb88d1e49499d02014504e17f7dc14c6f7
   company:
     name: #example
-    admins:
+    teams:
       domain: ""
-      emails: []
+      admin:
+        emails: []
+      qa:
+        emails: []
+      dev:
+        emails: []
+      pm:
+        emails: []
     domain:
       root: #example.com
       env: #int.example.com, dev.example.com, prd.example.com etc
@@ -24,7 +31,12 @@ global:
     name: #aws-prd or aws-int or aws-stg
     server: #https://2.2.2.2
     short_name: #pre/prd/int/dev/etc
-
+  access:
+    teams: ["admin"]
+    emails: []
+  pomerium:
+    policy:
+      default: ""
 
 ingressClassName: '{{ .Values.global.ingress.class }}'
 
