--- a/charts/postgres/values.yaml
+++ b/charts/postgres/values.yaml
@@ -3,9 +3,16 @@ global:
     tag: stub
   company:
     name: #example
-    admins:
+    teams:
       domain: ""
-      emails: []
+      admin:
+        emails: []
+      qa:
+        emails: []
+      dev:
+        emails: []
+      pm:
+        emails: []
     domain:
       root: #example.com
       env: #int.example.com, dev.example.com, prd.example.com etc
@@ -23,6 +30,12 @@ global:
     name: #aws-prd or aws-int or aws-stg
     server: #https://2.2.2.2
     short_name: #pre/prd/int/dev/etc
+  access:
+    teams: ["dev", "admin", "qa", "pm"]
+    emails: []
+  pomerium:
+    policy:
+      default: ""
 
 postgres-operator:
   enabled: false
@@ -107,12 +120,7 @@ pgadmin:
       cert-manager.io/cluster-issuer: '{{ printf "letsencrypt-%s" .Values.global.ingress.class }}'
       ingress.pomerium.io/pass_identity_headers: 'true'
       ingress.pomerium.io/policy: |
-        allow:
-          or:
-            {{- range $email := .Values.global.company.admins.emails }}
-            - email:
-                is: {{ $email }}
-            {{- end }}
+        {{- tpl .Values.global.pomerium.policy.default $ | indent 2}}
     hosts:
       - host: 'pg.{{ .Values.global.company.domain.env }}'
         paths:
