--- a/charts/globals.yaml
+++ b/charts/globals.yaml
@@ -29,6 +29,11 @@ global:
     name: #aws-prd or aws-int or aws-stg
     server: #https://2.2.2.2
     short_name: #pre/prd/int/dev/etc
+  ingress:
+    class: pomerium
+  access:
+    teams: ["admin"]
+    emails: []
   pomerium:
     policy:
       default: |
