rabbitmq: access change

--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -60,6 +60,9 @@ chart_apps:
     enabled: false
     values: |
       global: {{ .Values.global | toYaml | nindent 4 }}
+        access:
+          teams: ["admin", "dev"]
+          emails: []
   redis:
     enabled: false
     values: |
