--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -1,49 +1,5 @@
 labels: {}
 
-global:
-  company:
-    name: #example
-    teams:
-      domain: ""
-      admin:
-        emails: []
-      qa:
-        emails: []
-      dev:
-        emails: []
-      pm:
-        emails: []
-    domain:
-      root: #example.com
-      env: #int.example.com, dev.example.com, prd.example.com etc
-  network:
-    int_nat_gw:
-  registry:
-    url:
-  bucket:
-    type:
-    prefix:
-    suffix:
-  env:
-    name: #aws-prd or aws-int or aws-stg
-    server: #https://2.2.2.2
-    short_name: #pre/prd/int/dev/etc
-  pomerium:
-    policy:
-      default: |
-        {{- $teams  := .Values.global.company.teams }}
-        {{- $emails := .Values.global.access.emails }}
-        {{- range $team := .Values.global.access.teams }}
-        {{- $emails = concat $emails (get $teams $team).emails }}
-        {{- end }}
-        allow:
-          or:
-            {{- range $email :=  $emails }}
-            - email:
-                is: {{ $email }}
-            {{- end }}
-
-
 externalEnvDomains: []
 
 repository:
@@ -55,6 +11,8 @@ repository:
     app_charts: argocd/charts/app
     env_from_charts: ../../../../environments/{{ .Values.global.env.name }}
     env_from_app_charts: ../../../environments/{{ .Values.global.env.name }}
+    globals_from_app_charts: ../../infra/charts/globals.yaml
+    globals_from_charts: ../globals.yaml
   revision: master
 
 
@@ -102,6 +60,9 @@ chart_apps:
     enabled: false
     values: |
       global: {{ .Values.global | toYaml | nindent 4 }}
+        access:
+          teams: ["admin", "dev"]
+          emails: []
   redis:
     enabled: false
     values: |
@@ -126,14 +87,22 @@ chart_apps:
     enabled: false
     values: |
       global: {{ .Values.global | toYaml | nindent 4 }}
+        access:
+          teams: ["admin", "dev", "pm", "qa"]
+          emails: []
   grafana:
     enabled: false
     values: |
       global: {{ .Values.global | toYaml | nindent 4 }}
+        access:
+          teams: ["admin", "dev", "pm", "qa"]
+          emails: []
   konghq:
     enabled: false
     values: |
       global: {{ .Values.global | toYaml | nindent 4 }}
+        ingress:
+          class: konghq
   cert-manager:
     enabled: false
     values: |
@@ -143,6 +112,9 @@ chart_apps:
     values: |
       global: {{ .Values.global | toYaml | nindent 4 }}
         environment: {{ .Values.global.env | toYaml | nindent 6 }}
+        access:
+          teams: ["admin", "dev"]
+          emails: []
       argocd:
         externalRedis:
           host: rfrm-argocd-{{ .Values.global.env.name }}-redis
